Fix sequence of imagepipe brushes when used in the line tool

We should update parasites **before** actually selecting the brush,
because the freehand brush may have multiple brush resources, which
could have been set up for different sequence numbers

BUG:436419


(cherry picked from commit c5b532a6f518146a297465ae9b59bd423f6a1a8e)